; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_utrace_add_engine.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_utrace_add_engine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i64, i64 }
%struct.utrace = type { i32, i32, i32 }
%struct.utrace_engine = type { i32 }
%struct.utrace_engine_ops = type { i32 }

@EEXIST = common dso_local global i32 0, align 4
@UTRACE_ATTACH_EXCLUSIVE = common dso_local global i32 0, align 4
@ESRCH = common dso_local global i32 0, align 4
@REAP = common dso_local global i32 0, align 4
@EXIT_DEAD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task_struct*, %struct.utrace*, %struct.utrace_engine*, i32, %struct.utrace_engine_ops*, i8*)* @utrace_add_engine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @utrace_add_engine(%struct.task_struct* %0, %struct.utrace* %1, %struct.utrace_engine* %2, i32 %3, %struct.utrace_engine_ops* %4, i8* %5) #0 {
  %7 = alloca %struct.task_struct*, align 8
  %8 = alloca %struct.utrace*, align 8
  %9 = alloca %struct.utrace_engine*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.utrace_engine_ops*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %7, align 8
  store %struct.utrace* %1, %struct.utrace** %8, align 8
  store %struct.utrace_engine* %2, %struct.utrace_engine** %9, align 8
  store i32 %3, i32* %10, align 4
  store %struct.utrace_engine_ops* %4, %struct.utrace_engine_ops** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load %struct.utrace*, %struct.utrace** %8, align 8
  %15 = getelementptr inbounds %struct.utrace, %struct.utrace* %14, i32 0, i32 1
  %16 = call i32 @spin_lock(i32* %15)
  %17 = load i32, i32* @EEXIST, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %13, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @UTRACE_ATTACH_EXCLUSIVE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %6
  %24 = load %struct.utrace*, %struct.utrace** %8, align 8
  %25 = load i32, i32* %10, align 4
  %26 = load %struct.utrace_engine_ops*, %struct.utrace_engine_ops** %11, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = call i32 @find_matching_engine(%struct.utrace* %24, i32 %25, %struct.utrace_engine_ops* %26, i8* %27)
  %29 = call i64 @unlikely(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %23
  br label %65

32:                                               ; preds = %23, %6
  %33 = load i32, i32* @ESRCH, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %13, align 4
  %35 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %36 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %57, label %39

39:                                               ; preds = %32
  %40 = load i32, i32* @REAP, align 4
  %41 = call i64 @UTRACE_EVENT(i32 %40)
  %42 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %43 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %42, i32 0, i32 1
  store i64 %41, i64* %43, align 8
  %44 = call i32 (...) @smp_mb()
  %45 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %46 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @EXIT_DEAD, align 8
  %49 = icmp eq i64 %47, %48
  %50 = zext i1 %49 to i32
  %51 = call i64 @unlikely(i32 %50)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %56

53:                                               ; preds = %39
  %54 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %55 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %54, i32 0, i32 1
  store i64 0, i64* %55, align 8
  br label %65

56:                                               ; preds = %39
  br label %57

57:                                               ; preds = %56, %32
  %58 = load %struct.utrace_engine*, %struct.utrace_engine** %9, align 8
  %59 = getelementptr inbounds %struct.utrace_engine, %struct.utrace_engine* %58, i32 0, i32 0
  %60 = load %struct.utrace*, %struct.utrace** %8, align 8
  %61 = getelementptr inbounds %struct.utrace, %struct.utrace* %60, i32 0, i32 2
  %62 = call i32 @list_add_tail(i32* %59, i32* %61)
  %63 = load %struct.utrace*, %struct.utrace** %8, align 8
  %64 = getelementptr inbounds %struct.utrace, %struct.utrace* %63, i32 0, i32 0
  store i32 1, i32* %64, align 4
  store i32 0, i32* %13, align 4
  br label %65

65:                                               ; preds = %57, %53, %31
  %66 = load %struct.utrace*, %struct.utrace** %8, align 8
  %67 = getelementptr inbounds %struct.utrace, %struct.utrace* %66, i32 0, i32 1
  %68 = call i32 @spin_unlock(i32* %67)
  %69 = load i32, i32* %13, align 4
  ret i32 %69
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @find_matching_engine(%struct.utrace*, i32, %struct.utrace_engine_ops*, i8*) #1

declare dso_local i64 @UTRACE_EVENT(i32) #1

declare dso_local i32 @smp_mb(...) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
